--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,9 @@
                 <li class="main__li">
                     <a href="artisticapp.html" target="_blank">3. artisticapp</a>
                 </li>
+                <li class="main__li">
+                    <a href="portfolioweb.html" target="_blank">4. portfolioweb</a>
+                </li>
             </ul>
         </div>
     </body>
