--- a/src/portfolioweb.html
+++ b/src/portfolioweb.html
@@ -7,7 +7,7 @@
     <body>
         <header class="header__container">
             <div class="header__menu">
-                <div class="menu__box">○○○</div>
+                <div class="menu__box">🌑 🌑 🌑</div>
             </div>
             <div class="header__top">
                 <h4 class="header__title">shex^</h4>
