--- a/src/index.html
+++ b/src/index.html
@@ -11,13 +11,16 @@
                     <a href="ecommerce.html" target="_blank">1. ecommerce</a>
                 </li>
                 <li class="main__li">
-                    <a href="mealapp.html" target="_blank">2. mealapp</a>
+                    <a href="mealapp.html" target="_blank">2. mealapp (mobile page)</a>
                 </li>
                 <li class="main__li">
-                    <a href="artisticapp.html" target="_blank">3. artisticapp</a>
+                    <a href="artisticapp.html" target="_blank">3. artisticapp (mobile page)</a>
                 </li>
                 <li class="main__li">
                     <a href="portfolioweb.html" target="_blank">4. portfolioweb</a>
+                </li>
+                <li class="main__li">
+                    <a href="fashionweb.html" target="_blank">5. fashionweb</a>
                 </li>
             </ul>
         </div>
