--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,9 @@
                 <li class="main__li">
                     <a href="fashionweb.html" target="_blank">5. fashionweb</a>
                 </li>
+                <li class="main__li">
+                    <a href="newsweb.html" target="_blank">6. newsweb</a>
+                </li>
             </ul>
         </div>
     </body>
