--- a/src/portfolio2.html
+++ b/src/portfolio2.html
@@ -21,15 +21,12 @@
                     <h5 class="sub__title">
                         Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
                         sed diam nonummy nibh euismod tincidunt ut laoreet dolore
-                        magna aliquam erat volutpat. Ut wisi enim ad minim veniam,
-                        quis nostrud exerci tation ullamcorper suscipit lobortis nisl
-                        ut aliquip ex ea commodo consequat. nunc nobis videntur parum clari, fiant sollemnes
-                        in futurum.
+                        magna aliquam erat volutpat.
                     </h5>
                 </div>
                 <div class="menu__box">
                     <div class="box__arrow">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M5 3l3.057-3 11.943 12-11.943 12-3.057-3 9-9z"/></svg>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" preserveAspectRatio="xMidYMin"><path d="M5 3l3.057-3 11.943 12-11.943 12-3.057-3 9-9z"/></svg>
                     </div>
                     <div class="arrow__text">
                         <h5 class="more">View menu</h5>
