--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,9 @@
                 <li class="main__li">
                     <a href="newsweb.html" target="_blank">6. newsweb</a>
                 </li>
+                <li class="main__li">
+                    <a href="portfolio2.html" target="_blank">7. portfolio2</a>
+                </li>
             </ul>
         </div>
     </body>
