--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,9 @@
                 <li class="main__li">
                     <a href="portfolio2.html" target="_blank">7. portfolio2</a>
                 </li>
+                <li class="main__li">
+                    <a href="gridblog.html" target="_blank">8.gridblog</a>
+                </li>
             </ul>
         </div>
     </body>
