--- a/src/index.html
+++ b/src/index.html
@@ -31,6 +31,9 @@
                 <li class="main__li">
                     <a href="gridblog.html" target="_blank">8.gridblog</a>
                 </li>
+                <li class="main__li">
+                    <a href="magazine.html" target="_blank">9.magazine</a>
+                </li>
             </ul>
         </div>
     </body>
