--- a/src/index.html
+++ b/src/index.html
@@ -34,6 +34,9 @@
                 <li class="main__li">
                     <a href="magazine.html" target="_blank">9.magazine</a>
                 </li>
+                <li class="main__li">
+                    <a href="ecommerce2.html" target="_blank">10.ecommerce2</a>
+                </li>
             </ul>
         </div>
     </body>
