--- a/src/index.html
+++ b/src/index.html
@@ -37,6 +37,9 @@
                 <li class="main__li">
                     <a href="ecommerce2.html" target="_blank">10.ecommerce2</a>
                 </li>
+                <li class="main__li">
+                    <a href="mypage.html" target="_blank">11.mypage</a>
+                </li>
             </ul>
         </div>
     </body>
